--- a/smacofNM/smacofNM.tex
+++ b/smacofNM/smacofNM.tex
@@ -66,11 +66,43 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
+% definitions for citeproc citations
+\NewDocumentCommand\citeproctext{}{}
+\NewDocumentCommand\citeproc{mm}{%
+  \begingroup\def\citeproctext{#2}\cite{#1}\endgroup}
+\makeatletter
+ % allow citations to break across lines
+ \let\@cite@ofmt\@firstofone
+ % avoid brackets around text for \cite:
+ \def\@biblabel#1{}
+ \def\@cite#1#2{{#1\if@tempswa , #2\fi}}
+\makeatother
+\newlength{\cslhangindent}
+\setlength{\cslhangindent}{1.5em}
+\newlength{\csllabelwidth}
+\setlength{\csllabelwidth}{3em}
+\newenvironment{CSLReferences}[2] % #1 hanging-indent, #2 entry-spacing
+ {\begin{list}{}{%
+  \setlength{\itemindent}{0pt}
+  \setlength{\leftmargin}{0pt}
+  \setlength{\parsep}{0pt}
+  % turn on hanging indent if param 1 is 1
+  \ifodd #1
+   \setlength{\leftmargin}{\cslhangindent}
+   \setlength{\itemindent}{-1\cslhangindent}
+  \fi
+  % set entry spacing
+  \setlength{\itemsep}{#2\baselineskip}}}
+ {\end{list}}
+\usepackage{calc}
+\newcommand{\CSLBlock}[1]{\hfill\break\parbox[t]{\linewidth}{\strut\ignorespaces#1\strut}}
+\newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{\strut#1\strut}}
+\newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 \usepackage{tcolorbox}
 \usepackage{amssymb}
 \usepackage{yfonts}
 \usepackage{bm}
-\usepackage{kbordermatrix}
 \usepackage{titlesec}
 
 
@@ -123,7 +155,7 @@
 \title{Smacof at 50: A Manual\\
 Part 2: Non-metric Smacof}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started March 30 2024, Version of March 30, 2024}
+\date{Started March 30 2024, Version of April 03, 2024}
 
 \begin{document}
 \maketitle
@@ -138,8 +170,10 @@ TBD
 \textbf{Note:} This is a working manuscript which will be expanded/updated
 frequently. All suggestions for improvement are welcome. All Rmd, tex,
 html, pdf, R, and C files are in the public domain. Attribution will be
-appreciated, but is not required. The files can be found at
-\url{https://github.com/deleeuw/smacofCode}.
+appreciated, but is not required. The code files can be found at
+\url{https://github.com/deleeuw/smacofCode}, the manual files at
+\url{https://github.com/deleeuw/smacofManual}, and the example files
+at \url{https://github.com/deleeuw/smacofExamples}.
 
 \sectionbreak
 
@@ -147,48 +181,84 @@ appreciated, but is not required. The files can be found at
 
 pick and rank
 
-\[
-\sigma_R(X)=\sum_{r=1}^s\min_{\delta\in\mathcal{K}_r}(\delta-d(X))'W_r(\delta-d(X))
-\]
-with \(\mathcal{K}_r\) pointed polyhedral convex cones, defined by a partial order
-\(\leq_r\) and with \(W_r\) diagonal and positive semi-definite.
+\section{Loss Function}\label{loss-function}
 
 \[
-\sigma_R(X)=\sum_{r=1}^s(\hat d_r-d(X))'W_r(\hat d_r-d(X))
+\sigma(X,\delta_1,\cdots,\delta_s)=\frac{\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}(\delta_{ijr}-d_{ij}(X))^2}{\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}d_{ij}^2(X))}
 \]
-Let
+which must be minimized over \(X\) and over \(\delta_r\in\mathcal{K}_r\), with \(\mathcal{K}_r\) pointed polyhedral convex cones, defined by a partial order
+\(\leq_r\).
+
+Minimize of \(X\) for given \(\delta_{ijr}\).
 \[
-W_\star:=\sum_{r=1}^s W_r
+\sigma_R(X,\delta_1,\cdots,\delta_s)=\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}\delta_{ijr}^2-2\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}\delta_{ijr}d_{ij}(X)+\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}d_{ij}^2(X))
 \]
-and
+Nor use the basic smacof inequality
 \[
-\hat d_\star=\sum_{r=1}^s W_r\hat d_r
+d_{ij}(X)\geq\frac{1}{d_{ij}(Y)}\text{tr}\ X'A_{ij}Y 
+\]
+so that
+\[
+\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}\delta_{ijr}d_{ij}(X)\geq
+\text{tr}\ X'B(Y)Y
 \]
 \[
-\sum w_{\star ij}d_{ij}^2(X)=\text{tr}\ X'VX
+B(Y):=\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}\frac{\delta_{ijr}}{d_{ij}(Y)}A_{ij}
 \]
+Also
 \[
-\sum\hat d_{\star ij}d_{ij}(X)=\text{tr}\ X'B(X)X
+V:=\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}A_{ij}
 \]
+So that
+\[
+\sigma_R(X)\leq K-2\text{tr}\ X'B(Y)Y+\text{tr}\ X'VX
+\]
+and the smacof update over \(X\) with \(\text{tr}\ X'VX=1\) is the same
+as in smacofRR.
 
 \section{Paired Comparisons}\label{paired-comparisons}
 
 Positive Orthant / Absolute Value / Pairwise
 
+De Leeuw (1970)
+De Leeuw (2018)
+Hartmann (1979)
+Guttman (1969)
+Johnson (1973)
+
+Suppose datum \(r\) says that that \((i,j)<(k,l)\). Then \(w_{ijr}\) and \(w_{klr}\)
+are non-zero and all other elements of \(W_r\) are zero.
+Thus
 \[
-\min_{\hat D}r_{ijkl}(X,\hat D)=\begin{cases}0&\text{ if  correct},\\\frac12w_{ijkl}(d_{ij}(X)-d_{kl}(X))^2&\text{ if wrong}.\end{cases}
+w_{ijr}(\delta_{ijr}-d_{ij})^2+w_{klr}(\delta_{klr}-d_{kl})^2
 \]
+Must be minimized over \(\delta_{ijr}\leq\delta_{klr}\). If \(d_{ij}\leq d_{kl}\)
+then \(\hat d_{ijr}=d_{ij}\) and \(\hat d_{klr}=d_{kl}\), and otherwise
+\[
+\hat d_{ijr}=\hat d_{klr}=\frac{w_{ijr}d_{ij}+w_{klr}d_{kl}}{w_{ijr}+w_{klr}}
+\]
+Thus
+
+\[w_{ijr}(\delta_{ijr}-d_{ij})^2+w_{klr}(\delta_{klr}-d_{kl})^2\]
+is zero if the order of \(d_{ij}\) and \(d_{kl}\) is the same as the order in the data
+and
 
 \[
-w_{ijkl}\{(\hat d_{ij}-d_{ij}(X))^2+(\hat d_{kl}-d_{kl}(X))^2\}
+w_{ijr}(\frac{w_{ijr}d_{ij}+w_{klr}d_{kl}}{w_{ijr}+w_{klr}}-d_{ij})^2
++w_{klr}(\frac{w_{ijr}d_{ij}+w_{klr}d_{kl}}{w_{ijr}+w_{klr}}-d_{kl})^2
 \]
 \[
-\sigma(X,\hat D)=\sum_{i=1}^n\sum_{j=1}^n\sum_{k=1}^n\sum_{l=1}^nw_{ijkl}\{(\hat d_{ij}-d_{ij}(X))^2+(\hat d_{kl}-d_{kl}(X))^2\}.
+\frac{w_{ijr}w_{klr}^2}{(w_{ijr}+w_{klr})^2}(d_{ij}-d_{kl})^2+
+\frac{w_{ijr}^2w_{klr}}{(w_{ijr}+w_{klr})^2}(d_{ij}-d_{kl})^2
 \]
+\[
+\frac{w_{ijr}w_{klr}}{w_{ijr}+w_{klr}}(d_{ij}-d_{kl})^2
+\]
+\(B\) matrix
 
-\[
-\text{sign}(\hat d_{ij}-\hat d_{kl})=s_{ijkl}
-\]
+So far we have only considered the forced-choice situation in which
+the subject has to choose one of the pairs. If we allow for the alternative
+that \((i,j)\) and \((k,l)\) are equally similar then we have two approaches. In the primary approach we
 
 \[
 \begin{bmatrix}
@@ -205,6 +275,43 @@ w_{ijkl}\{(\hat d_{ij}-d_{ij}(X))^2+(\hat d_{kl}-d_{kl}(X))^2\}
 
 \section{Triads}\label{triads}
 
-\section{Rank Orders}\label{rank-orders}
+\section{pick 1/3 Method of triads}\label{pick-13-method-of-triads}
+
+Pick the two most similar
+\((i,j)<(i,k)\) and \((i,j)<(j,k)\)
+
+\section{order 3/3 Complete method of triads}\label{order-33-complete-method-of-triads}
+
+\((i,j)<(i,k)<(j,k)\)
+
+\section{Richardson --}\label{richardson}
+
+each triple presented three times, with a different hub each time
+which one of the two is maximally similar to the hub stimulus. Thus the data
+is the single inequality \((i,k) < (j,k)\). Coombs calls this the \ldots{}
+
+\section{Conditional rank Orders -- Klingberg}\label{conditional-rank-orders-klingberg}
+
+\section*{References}\label{references}
+\addcontentsline{toc}{section}{References}
+
+\phantomsection\label{refs}
+\begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-deleeuw_R_70a}
+De Leeuw, J. 1970. {``The Positive Orthant Method for Nonmetric Multidimensional Scaling.''} Research Report 001-70. Leiden, The Netherlands: Department of Data Theory FSW/RUL.
+
+\bibitem[\citeproctext]{ref-deleeuw_E_18d}
+---------. 2018. {``{The Positive Orthant Method }.''} 2018.
+
+\bibitem[\citeproctext]{ref-guttman_69}
+Guttman, L. 1969. {``{Smallest Space Analysis by the Absolute Value Principle}.''} In \emph{{Proceedings of the XIX International Congress of Psychology, London}}.
+
+\bibitem[\citeproctext]{ref-hartmann_79}
+Hartmann, W. 1979. \emph{{Geometrische Modelle zur Analyse empirischer Data}}. Akademie Verlag.
+
+\bibitem[\citeproctext]{ref-johnson_73}
+Johnson, R. M. 1973. {``{Pairwise Nonmetrc Multidimensional Scaling}.''} \emph{Psychometrika} 38 (12--18).
+
+\end{CSLReferences}
 
 \end{document}
